[package]
name = "moneys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.25.1"
chrono-tz = "0.8.1"
futures = "0.3.25"
sqlite = "0.30.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

